--- a/style.css
+++ b/style.css
@@ -16,6 +16,9 @@
 }
 
 body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   background-color: var(--light-cream);
   font-family: "Plus Jakarta Sans", sans-serif;
   font-weight: 500;
@@ -59,6 +62,14 @@ section {
   padding: 1rem;
 }
 
+nav,
+header,
+section,
+footer {
+  width: 100%;
+  max-width: calc(1110px + 2rem);
+}
+
 /* Nav / Footer */
 nav,
 footer {
@@ -95,6 +106,38 @@ header > p {
   gap: 1.5rem;
   margin-bottom: 4rem;
 }
+@media screen and (min-width: 768px) {
+  body {
+    background-color: lightgreen;
+  }
+  #skills-section {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 11.375rem 9.875rem 11.375rem;
+  }
+  #skill-1 {
+    grid-row-end: span 2;
+  }
+}
+@media screen and (min-width: 1400px) {
+  body {
+    background-color: lightblue;
+  }
+  #skills-section {
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 11.375rem 9.875rem;
+  }
+  #skill-1 {
+    grid-row-end: span 2;
+  }
+  #skill-4 {
+    grid-column-start: 3;
+  }
+  #skill-5 {
+    grid-row-start: 1;
+    grid-column-start: 5;
+  }
+}
+
 .skill-div {
   display: flex;
   flex-direction: row;
@@ -139,7 +182,7 @@ header > p {
 
 /* About Section */
 #about-section {
-  text-align: center;
+  /* text-align: center; */
   padding: 1rem;
   margin-bottom: 4rem;
 }
@@ -148,7 +191,7 @@ img.about-image {
   max-width: 300px;
   margin-bottom: 2.5rem;
 }
-#about-section > h2 {
+#about-section h2 {
   font-size: 26px;
   font-weight: 700;
   margin-bottom: 1.5rem;
