--- a/style.css
+++ b/style.css
@@ -118,7 +118,7 @@ header > p {
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 22.75rem 11.375rem 9.875rem 11.375rem 11.375rem;
   gap: 1.5rem;
-  margin-bottom: 4rem;
+  margin-bottom: 4.25rem;
 }
 @media screen and (min-width: 768px) {
   body {
@@ -197,14 +197,15 @@ header > p {
 /* About Section */
 #about-section {
   padding: 1rem;
-  margin-bottom: 4rem;
+  margin-bottom: 4.25rem;
 }
 img.about-image {
   width: 100%;
   max-width: 300px;
   margin-bottom: 2.5rem;
 }
-#about-section h2 {
+#about-section h2,
+#about-section p {
   margin-bottom: 1.5rem;
 }
 
@@ -212,7 +213,7 @@ img.about-image {
 #work-section {
   text-align: center;
   padding-inline: 0px;
-  margin-bottom: 4rem;
+  margin-bottom: 4.25rem;
 }
 #work-section h2 {
   padding-inline: 1rem;
