--- a/style.css
+++ b/style.css
@@ -62,6 +62,9 @@ img.site-logo {
   border-radius: 50rem;
   padding-inline: 1.75rem;
 }
+.btn:hover {
+  color: var(--light-cream);
+}
 @media screen and (min-width: 768px) {
   .btn {
     height: 3.5rem;
@@ -248,14 +251,22 @@ img.about-image {
 
 /* Work */
 #work-section {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
   text-align: center;
   padding-inline: 0px;
   margin-bottom: 4.25rem;
   max-width: unset;
 }
+@media screen and (min-width: 768px) {
+  #work-section {
+    gap: 3.5rem;
+  }
+}
 #work-section h2 {
   padding-inline: 1rem;
-  margin-bottom: 2rem;
+  margin-bottom: 0;
 }
 
 /* Work - Slick Slider */
@@ -274,6 +285,32 @@ img.about-image {
   display: block;
   width: 100%;
   border-radius: 0.5rem;
+}
+
+.slider-arrow-wrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 1rem;
+}
+.slider-arrow-prev,
+.slider-arrow-next {
+  width: 4rem;
+  aspect-ratio: 1 /1;
+  /* padding: 1rem; */
+  border: none;
+  border-radius: 50rem;
+  background-color: var(--black);
+}
+.slider-arrow-prev:hover,
+.slider-arrow-next:hover {
+  background-color: var(--galactic-blue);
+}
+.slider-arrow-prev {
+}
+.slider-arrow-next {
+}
+.slider-arrow-icon {
 }
 
 /* Booking Section */
