--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body {
   font-family: "Plus Jakarta Sans", sans-serif;
   font-weight: 500;
 }
-@media screen and (min-width: 768px) {
+/* @media screen and (min-width: 768px) {
   body {
     background-color: lightgreen;
   }
@@ -32,7 +32,7 @@ body {
   body {
     background-color: lightblue;
   }
-}
+} */
 
 /* Typography */
 .heading-lg {
