--- a/style.css
+++ b/style.css
@@ -23,6 +23,12 @@ body {
   font-family: "Plus Jakarta Sans", sans-serif;
   font-weight: 500;
 }
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
 /* @media screen and (min-width: 768px) {
   body {
     background-color: lightgreen;
