--- a/style.css
+++ b/style.css
@@ -15,30 +15,37 @@
   --light-cream: #fff7f0;
 }
 
-body {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: var(--light-cream);
-  font-family: "Plus Jakarta Sans", sans-serif;
-  font-weight: 500;
+/* RESET */
+::after,
+::before {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: inherit;
 }
-main {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 100%;
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  line-height: 1.2;
+  margin: 0;
 }
-/* @media screen and (min-width: 768px) {
-  body {
-    background-color: lightgreen;
-  }
+p {
+  margin: 0;
 }
-@media screen and (min-width: 1400px) {
-  body {
-    background-color: lightblue;
-  }
-} */
+
+img,
+svg {
+  vertical-align: middle;
+}
+
+button {
+  border: none;
+  cursor: pointer;
+}
 
 /* Typography */
 .heading-lg {
@@ -99,6 +106,25 @@ img.site-logo {
 }
 .btn-red:hover {
   background-color: var(--summer-yellow);
+}
+
+/***************/
+/* PAGE LAYOUT */
+/***************/
+
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: var(--light-cream);
+  font-family: "Plus Jakarta Sans", sans-serif;
+  font-weight: 500;
+}
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
 }
 
 /************/
